--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.20.0",
+    "react-redux": "^8.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.69.5"
   },
   "scripts": {
     "start": "react-scripts start",
